--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,23 +3,23 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/397107/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Mon, 14 Dec 2020 19:54:22 UTC
 stages:
 - id: 663
   step: 10594
   is_completed: true
 - id: 664
   step: 10595
-  is_completed: false
+  is_completed: true
 - id: 665
   step: 10596
-  is_completed: false
+  is_completed: true
 - id: 666
   step: 10597
-  is_completed: false
+  is_completed: true
 - id: 667
   step: 10598
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Units of information
